wireguard/wireguard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: wireguard
spec:
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
      - name: wireguard
        image: lscr.io/linuxserver/wireguard:v1.0.20210914-ls20
        securityContext:
          privileged: true
          capabilities:
            add:
            - NET_ADMIN
            - SYS_MODULE
        ports:
        - containerPort: 443
          protocol: UDP
        volumeMounts:
          - mountPath: /home
            name: wireguard-config
          - mountPath: /config/scripts
            name: wireguard-check
        lifecycle:
          postStart:
            exec:
              command: ["sh", "-c", "sleep 15; ip route delete default; wg-quick down wg0; wg-quick up /home/wg0.conf"]
        livenessProbe:
          exec:
            command: ["/bin/bash", "-c", "/config/scripts/wg-check.sh"]
          initialDelaySeconds: 30
          periodSeconds: 30
      volumes:
      - emptyDir: {}
        name: wireguard-config
      - name: wireguard-secret
        secret:
          secretName: wireguard
      - name: wireguard-check
        secret:
          secretName: wireguard-check
