wireguard/wireguard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: wireguard
spec:
  selector:
    app: wireguard
  ports:
  - protocol: UDP
    port: 443
  type: LoadBalancer
  loadBalancerIP: 192.168.99.24
