wireguard/wireguard-network.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: wireguard
  namespace: wireguard
spec:
  endpointSelector:
    matchLabels:
      app: wireguard
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSet:
        - cidr: 192.168.77.0/24
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
        - ports:
            - port: "53"
        - ports:
            - port: "8443"
    - toCIDRSet:
        - cidr: 192.168.99.0/24
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
        - ports:
            - port: "22"
        - ports:
            - port: "53"
    - toCIDRSet:
        - cidr: 10.2.0.0/24
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "5001"
